fix: pass additional location fields to MSP
